--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -57,6 +57,6 @@
             [(ngModel)]="publicationNumber"></textarea>
     </div>
 
-    <button class="btn btn-primary" onclick="submitForm()">Submit</button>
+    <button class="btn btn-primary" (click)="submitForm()">Submit</button>
 
 </form>
