changes ag grid look

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,8 @@
 
   <div *ngIf="rowData.length > 0">
     <ag-grid-angular
-      style="width: 100%; height: 200px;" 
-      class="ag-theme-balham"
+      style="width: 100%; height: 600px;" 
+      class="ag-theme-material"
       [rowData]="rowData" 
       [columnDefs]="columnDefs"
       [defaultColDef]="defaultColDef"
