--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 
   <div *ngIf="rowData.length > 0">
     <ag-grid-angular
-      style="width: 100%; height: 600px;" 
+      style="width: 100%; height: 500px; border: 1px solid rgb(219, 219, 219); margin: 50px 0;" 
       class="ag-theme-material"
       [rowData]="rowData" 
       [columnDefs]="columnDefs"
