voice integration with select/deselect a record and export

--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -62,7 +62,7 @@
             [(ngModel)]="publicationNumber"></textarea>
     </div>
 
-    <button class="btn btn-primary" (click)="submitForm()">Submit</button>
+    <button class="btn btn-primary" (click)="submitForm()">Search</button>
 
 </form>
 
