--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -36,15 +36,14 @@
 
     <div class="form-group">
         <label>Text field</label>
-        <input type="text" class="form-control" name="email-field" placeholder="Say Enter text field"
+        <input type="text" class="form-control" style="position: relative;" name="email-field" placeholder="Say Enter text field"
             [(ngModel)]="textField" (ngModelChange)="getSuggestions()" autocomplete="off">
-    </div>
     <div *ngIf="suggestedData.length">
       <ul class="filter-select">
         <li class="filter-select-list" *ngFor="let data of suggestedData" (click)="selectedQuery(data)"><p class="artist-name">{{ data }}</p>
       </ul>
     </div>
-
+  </div>
     <div class="form-group">
         <label for="exampleFormControlSelect1">Patent collections</label>
         <select class="form-control" id="exampleFormControlSelect1" name="single-select" required
