--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -33,3 +33,11 @@
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
 }
+::ng-deep .ag-body-viewport::-webkit-scrollbar-thumb {
+    background-color: #646464;
+    border-radius: 5px;
+}
+::ng-deep .ag-body-viewport::-webkit-scrollbar {
+    height: 5px;
+    width: 3px;
+  }
