--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
+<body>
+<div class="toolbar" role="banner">
+  <img fxLayoutAlign="start center" src="assets/images/clarivate-logo-header.svg" alt="logo" class="logo" width="100" height="13" />
+</div>
 <div class="container">
-  <h1 class="text-center">voiceBot</h1>
+  <h1 class="text-center appName">Clarivate's Voice</h1>
 
   <ng-template [ngIf]="!ml.voiceBotReady || !ml.pronoun">
     <app-listen *ngIf="speech.speechSupported" ></app-listen>
@@ -33,3 +37,10 @@
     <i class="bi bi-mic-mute-fill"  *ngIf="!speech.listening" ></i>
   </button>
 </div>
+
+<div class="footer">
+          <div class="block left-block">
+            <p class="copyright">&copy;2021 Clarivate Analytics. All rights reserved.</p>
+         </div>
+</div>
+</body>
