--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,8 +12,8 @@
     bottom: 8%;
     padding: 15px 20px;
     margin: 5px 5px;
-    color: #000;
-    background-color: rgb(252, 186, 186);
+    color: white;
+    background-color:#ff3333;
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
@@ -33,3 +33,50 @@
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
 }
+
+
+
+.logo{
+    height: 25px;
+    padding-left: 22px;
+}
+
+.appName {
+    padding: 35px;
+    font-family: cursive;
+}
+
+.footer  {
+    top: 98vh;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    color: white;
+    font-weight: 600;
+    position: relative;
+  }
+
+
+
+  .toolbar {
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    background-color: black;
+    color: white;
+    font-weight: 600;
+  }
+
+
+
+  
+
