--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -62,7 +62,7 @@
             [(ngModel)]="publicationNumber"></textarea>
     </div>
 
-    <button class="button" (click)="submitForm()">Search</button>
+    <button class="button search" (click)="submitForm()">Search</button>
 
 </form>
 
