--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,7 +19,7 @@
   letter-spacing: 2.5px;
   font-weight: 500;
   color: rgb(255, 255, 255);
-  background-color: rgb(252, 186, 186);
+  background-color: #ff3333;
   border: 1px solid #d8dbdf;
   border-radius: 45px;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -29,7 +29,7 @@
   }
 
 .button:hover {
-  background-color: rgb(252, 186, 186);
+  background-color: rgb(223, 68, 68);
   box-shadow: 0px 8px 16px #b4b4b4;
   color: #fff;
   transform: translateY(-0.5px);
