--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,14 @@
+$variable: #5e33bf;
+
 ::ng-deep .ag-theme-material .ag-cell, .ag-theme-material .ag-full-width-row .ag-cell-wrapper.ag-row-group {
     line-height: 30px;
+}
+
+.ag-spinner {
+    color: $variable;
+    margin: 10% 0 10% 50%; 
+    width: 70px; 
+    height: 70px;
 }
 
 .recorder {
@@ -13,22 +22,25 @@
     padding: 15px 20px;
     margin: 5px 5px;
     color: #000;
-    background-color: rgb(252, 186, 186);
+    background-color: $variable;
     border-radius: 45px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
-}
 
-.bi-mic-fill {
-    height: 1000px;
+    .bi {
+        color: white;
+    }
 }
-
 .ag-grid-box {
+    width: 100%; 
+    height: 500px; 
+    margin: 50px 0;
+    font-family: 'Roboto', sans-serif;
     border: 1px solid rgb(241, 241, 241);
-    color: #000;
-    background-color: #fff;
+    color: rgb(83, 83, 83);
+    background-color: white;
     border-radius: 5px;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease 0s;
@@ -39,5 +51,5 @@
 }
 ::ng-deep .ag-body-viewport::-webkit-scrollbar {
     height: 5px;
-    width: 3px;
+    width: 5px;
   }
