--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,6 +26,7 @@
 }
 
 .ag-grid-box {
+    width: 100%; height: 500px; margin: 100px 0;
     border: 1px solid rgb(241, 241, 241);
     color: #000;
     background-color: #fff;
