--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,8 +34,13 @@ $headercolor: rgb(29, 29, 29);
         color: white;
     }
 }
+
+.grid{
+    min-height: 161px;
+}
 .ag-grid-box {
-    width: 100%; height: 500px; margin: 100px 0;
+    width: 100%; height: 600px;    margin: 100px 0px 30px;
+    
     border: 1px solid rgb(241, 241, 241);
     color: rgb(83, 83, 83);
     background-color: white;
@@ -65,12 +70,12 @@ $headercolor: rgb(29, 29, 29);
 }
 
 .footer  {
-    top: 98vh;
+    top: 10px;
     width: 100%;
     bottom: 0px;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 45px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,7 +93,7 @@ $headercolor: rgb(29, 29, 29);
     top: 0;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 45px;
     display: flex;
     align-items: center;
     background-color: $headercolor;
