snack bar  changes

--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -1,6 +1,6 @@
-<!-- <div class="alert alert-info mt-3">
+<!-- <div class="alert alert-info mt-3"> -->
 
-  <div class="row mb-3">
+  <!-- <div class="row mb-3">
     <div class="col btn-group">
       <button
         class="btn btn-primary col-6"
@@ -16,17 +16,17 @@
           <img class="icon" src="/assets/images/mic-off.png">Stop
       </button>
     </div>
-  </div>
+  </div> -->
 
-  <div class="row" *ngIf="errorMsg || arrayFull">
+  <!-- <div class="row" *ngIf="errorMsg || arrayFull">
     <div class="col">
       <p class="alert alert-warning">
         <ng-template [ngIf]="errorMsg">{{errorMsg}}</ng-template>
         <ng-template [ngIf]="arrayFull">You've already filled in all the available fields for <strong>{{arrayFull}}</strong>.</ng-template>
       </p>
     </div>
-  </div>
-</div> -->
+  </div> -->
+<!-- </div> -->
 
 
 
