--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,6 +12,14 @@ html, body {
   font-size: 16px;
   background-color: #f1f1f1;
 }
+html::-webkit-scrollbar-thumb {
+  background-color: #646464;
+  border-radius: 5px;
+}
+html::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
 .btn {
   cursor: pointer;
 }
