--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <img fxLayoutAlign="start center" src="assets/images/clarivate-logo-header.svg" alt="logo" class="logo" width="130" height="13" />
   </div>
   <div class="container">
-    <h1 class="text-center appName">Clarivate's Voice Assistant</h1>
+    <h1 class="text-center appName">Clarivate's Echo</h1>
 
     <ng-template [ngIf]="!ml.voiceBotReady || !ml.pronoun">
       <app-listen *ngIf="speech.speechSupported" ></app-listen>
