--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,9 +8,9 @@
 $variable: #5e33bf;
 
 html, body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Source Sans Pro",sans-serif;
   font-size: 16px;
-  background-color: #f1f1f1;
+  background-color: #Fdfcfa;
 }
 html::-webkit-scrollbar-thumb {
   background-color: #646464;
