--- a/src/app/components/export-checkbox.scss
+++ b/src/app/components/export-checkbox.scss
@@ -12,6 +12,10 @@
         height: 18px;
         width: 18px;
     }
+    
+    input:checked {
+        background-color: rgb(0, 153, 153);
+    }
 
     .record-text {
         font-size: 10px;
