--- a/src/app/listen/listen.component.html
+++ b/src/app/listen/listen.component.html
@@ -31,32 +31,31 @@
 
 
 
-
-  <form #MyForm="ngForm" >
-
-    <div class="form-group">
-      <label>Text field</label>
-      <input type="text" class="form-control" style="position: relative;" name="email-field" placeholder="Say Enter text field"
-          [(ngModel)]="textField" (ngModelChange)="getSuggestions()" autocomplete="off">
-      <div *ngIf="suggestedData.length">
-        <ul class="filter-select">
-          <li class="filter-select-list" *ngFor="let data of suggestedData" (click)="selectedQuery(data)"><span class="artist-name">{{ data }}</span>
-        </ul>
-      </div>
+<form #MyForm="ngForm">
+  <div class="form-group">
+    <label class="listen-text-label">Text field</label>
+    <input type="text" style="position: relative; height: 40px;" name="email-field" placeholder="Say enter text field"
+        [(ngModel)]="textField" (ngModelChange)="getSuggestions()" autocomplete="off">
+    <div *ngIf="suggestedData.length">
+      <ul class="filter-select">
+        <li class="filter-select-list" *ngFor="let data of suggestedData" (click)="selectedQuery(data)"><span class="artist-name">{{ data }}</span>
+      </ul>
+    </div>
   </div>
+
   <div class="form-group">
-    <label for="exampleFormControlTextarea1">Publication number</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"  placeholder="Say Enter Publication Number" name="textarea-field" required
+    <label class="listen-text-label" for="exampleFormControlTextarea1">Publication number</label>
+    <textarea id="exampleFormControlTextarea1" rows="3" style="min-height: 90px;" placeholder="Say enter publication number" name="textarea-field" required
         [(ngModel)]="publicationNumber"></textarea>
-</div>
+  </div>
+
   <div class="form-group">
-    <label for="exampleFormControlTextarea2">Custom Field</label>
-    <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"  placeholder="Say Enter Custom Field" name="textarea-field2" required
+    <label class="listen-text-label" for="exampleFormControlTextarea2">Custom field</label>
+    <textarea id="exampleFormControlTextarea2" rows="3" style="min-height: 90px;" placeholder="Say enter custom field" name="textarea-field2" required
         [(ngModel)]="dwpiField"></textarea>
   </div>
-   
 
-    <button class="button search" (click)="submitForm()">Search</button>
+  <button class="button search" (click)="submitForm()">Search</button>
 
 </form>
 
