--- a/src/app/listen/listen.component.scss
+++ b/src/app/listen/listen.component.scss
@@ -17,6 +17,7 @@ $variable: #5e33bf;
   overflow-y: auto;
   padding-left: 0;
   z-index: 2;
+  border-radius: 5px;
 
   .filter-select-list {
     display: flex;
