--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,7 @@ html::-webkit-scrollbar {
 
 .toast-listen-bar {
   font-family: 'Source Sans Pro', sans-serif;
-  background: $headercolor;
+  background: $variable;
   color: #ffffff;
   max-width: 50vw !important;
   min-width: 73% !important;
