--- a/src/app/listen/listen.component.scss
+++ b/src/app/listen/listen.component.scss
@@ -38,8 +38,8 @@ $variable: #5e33bf;
 }
 
 .search {
-  margin-top: 19px;
-  float: right;
+  margin-top: 28px;
+  float: left;
 }
 .filter-select::-webkit-scrollbar-thumb {
   background-color: #646464;
