--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -14,7 +14,7 @@ $whiteshade: #Fdfcfa;
     position: fixed;
     left: 93%;
     float: right;
-    bottom: 12%;
+    bottom: 28%;
     padding: 15px;
     color: white;
     background-color: $variable;
@@ -23,6 +23,7 @@ $whiteshade: #Fdfcfa;
     transition: all 0.3s ease 0s;
     cursor: pointer;
     outline: none;
+    z-index: 100;
 
     .bi {
         color: white;
@@ -34,14 +35,15 @@ $whiteshade: #Fdfcfa;
 
     .ag-spinner {
         color: $variable;
-        margin: 10% 0 10% 50%; 
+        margin: 15% 0 10% 35%; 
         width: 70px; 
         height: 70px;
     }
 
     .ag-grid-box {
-        width: 100%; height: 600px;    margin: 100px 0px 30px;
-        
+        width: 100%; 
+        height: 600px;    
+        margin: 140px 0px 30px;
         border: 1px solid rgb(241, 241, 241);
         color: rgb(83, 83, 83);
         background-color: white;
@@ -68,10 +70,11 @@ $whiteshade: #Fdfcfa;
 .footer  {
     top: 0;
     width: 100%;
-    bottom: 0px;
+    bottom: 0;
     left: 0;
     right: 0;
-    height: 60px;
+    height: 120px;
+    margin-top: 6%;
     display: flex;
     align-items: center;
     justify-content: center;
