--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -41,4 +41,23 @@
   <div class="footer">
     <span class="copyright">&copy;2021 Clarivate Analytics. All rights reserved.</span>
   </div>
+<!-- //help -->
+  <div class="card">
+    <div class="image">
+      
+    </div>
+    <div class="copy">
+      <span class="content margin">Say 'Enter Text Covid'</span>
+      <span class="content">Say 'Enter Publication 1234'</span>
+      <span class="content">Say 'Enter Custom Field'</span>
+      <span class="content"> Say 'Search'</span>
+      <span class="content">Say 'Select Record 01'</span>
+      <span class="content">Say 'Deselect Record 01'</span>
+      <span class="content">Say 'Export'</span>
+    </div>
+    <div class="ribbon">
+      I can Understand
+    </div>
+  </div>
+  <!-- ends help -->
 </body>
