--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,75 +2,134 @@ $variable: #5e33bf;
 $headercolor: #282828;
 $whiteshade: #Fdfcfa;
 
-::ng-deep .ag-theme-material .ag-cell, .ag-theme-material .ag-full-width-row .ag-cell-wrapper.ag-row-group {
-    line-height: 30px;
-}
 
-.recorder {
+
+.toolbar {
+    /* position: absolute; */
+    top: 0;
+    left: 0;
+    right: 0;
     height: 70px;
-    width: 70px;
-    border: 1px solid rgb(243, 243, 243);
-    border-radius: 50px;
-    position: fixed;
-    left: 93%;
-    float: right;
-    bottom: 28%;
-    padding: 15px;
+    display: flex;
+    align-items: center;
+    background-color: $whiteshade;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     color: white;
-    background-color: $variable;
-    border-radius: 50px;
-    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease 0s;
-    cursor: pointer;
-    outline: none;
-    z-index: 100;
-
-    .bi {
-        color: white;
-    }
-}
-
-.grid{
-    min-height: 161px;
-
-    .ag-spinner {
-        color: $variable;
-        margin: 15% 0 10% 35%; 
-        width: 70px; 
-        height: 70px;
-    }
-
-    .ag-grid-box {
-        width: 100%; 
-        height: 600px;    
-        margin: 140px 0px 30px;
-        border: 1px solid rgb(241, 241, 241);
-        color: rgb(83, 83, 83);
-        background-color: white;
-        border-radius: 5px;
-        box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease 0s;
-    }
-}
-
-::ng-deep .ag-body-viewport::-webkit-scrollbar-thumb {
-    background-color: #646464;
-    border-radius: 5px;
-}
-::ng-deep .ag-body-viewport::-webkit-scrollbar {
-    height: 5px;
-    width: 5px;
-}
-
-.appName {
-    padding: 30px 35px;
-    font-size: 35px;
     font-weight: 600;
+    z-index: 10;
+    position: fixed;
 
-    .appname-quote {
-        font-size: 16px;
-        font-weight: normal;
-        margin-left: 20%;
+    .logo{
+        height: 32px;
+        width: 36%;
+    }
+}
+
+.form-body {
+    margin-top: 70px;
+
+    .app-title {
+        display: flex;
+        justify-content: space-around;
+        padding: 15px 0;
+
+        .listen-body-img {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            img {
+                height: 100px;
+                width: 100px;
+            }
+
+            span {
+                font-size: 16px;
+                font-weight: 600;
+                font-family: 'roboto', sans-serif;
+                text-align: center;
+            }
+        }
+
+        .innovate-voice {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            .appName {
+                font-size: 35px;
+                font-weight: 600;
+                color: $variable;
+            }
+    
+            .appname-quote {
+                font-size: 16px;
+                font-weight: normal;
+                color: $headercolor;
+                text-align: right;
+            }
+        }
+    }
+
+    .app-listen-body {
+        height: 550px;
+        width: 100%;
+        background-image: url('/assets/images/home1.jpg');
+        display: flex;
+        justify-content: center;
+        //background-attachment: fixed;
+
+        .recorder {
+            height: 100px;
+            width: 100px;
+            border: 1px solid rgb(243, 243, 243);
+            position: fixed;
+            color: white;
+            background-color: $variable;
+            border-radius: 500px;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease 0s;
+            cursor: pointer;
+            outline: none;
+            z-index: 100;
+            margin: 70px 0 0 80px;
+        
+            .bi {
+                color: white;
+            }
+        }
+    }
+
+    .grid{
+        width: 76%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    
+        .ag-spinner {
+            color: $variable;
+            width: 70px; 
+            height: 70px;
+            margin-bottom: 50px;
+        }
+    
+        .ag-grid-box {
+            width: 100%; 
+            height: 600px;    
+            margin-top: 50px;
+            border: 1px solid rgb(241, 241, 241);
+            color: rgb(83, 83, 83);
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease 0s;
+        }
+    
+        .export-btn {
+            margin: 50px 0;
+        }
     }
 }
 
@@ -80,8 +139,7 @@ $whiteshade: #Fdfcfa;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 120px;
-    margin-top: 6%;
+    height: 80px;   
     display: flex;
     align-items: center;
     justify-content: center;
@@ -92,25 +150,13 @@ $whiteshade: #Fdfcfa;
     align-items: middle;
 }
 
-.toolbar {
-    /* position: absolute; */
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 70px;
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    background-color: $whiteshade;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-    color: white;
-    font-weight: 600;
-    z-index: 10;
-
-    .logo{
-        height: 30px;
-        width: 38%;
-    }
+::ng-deep .ag-body-viewport::-webkit-scrollbar-thumb {
+    background-color: #646464;
+    border-radius: 5px;
+}
+::ng-deep .ag-body-viewport::-webkit-scrollbar {
+    height: 5px;
+    width: 5px;
 }
 
 ::ng-deep .patent-checkbox {
@@ -132,7 +178,8 @@ $whiteshade: #Fdfcfa;
     }
 }
 
-
-
+::ng-deep .ag-theme-material .ag-cell, .ag-theme-material .ag-full-width-row .ag-cell-wrapper.ag-row-group {
+    line-height: 30px;
+}
   
 
