--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="form-body">
     <div class="app-title">
       <div class="listen-body-img">
-        <img src='https://clarivate.com/wp-content/uploads/2021/04/Purple_Pictograms_Final_on_White_RGB_51.png' />
+        <img src='https://clarivate.com/wp-content/uploads/2021/04/Purple_Pictograms_Final_on_White_RGB_51.png' alt="mic-img"/>
         <span>Innovate using your voice</span>
       </div>
       <div class="innovate-voice">
@@ -48,16 +48,13 @@
     <!-- <app-voiceBot *ngIf="ml.voiceBotReady && ml.pronoun"></app-voiceBot> -->
   </div>
 
-  
-
   <div class="footer">
     <span class="copyright">&copy;2021 Clarivate Analytics. All rights reserved.</span>
   </div>
-  
+
 <!-- //help -->
   <div class="card">
     <div class="image">
-      
     </div>
     <div class="copy">
       <span class="content margin">Say 'Enter Text Covid'</span>
