text name chaged

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
         <span>Innovate using your voice</span>
       </div>
       <div class="innovate-voice">
-        <h1 class="text-center appName"> The Customer's Lens And Voice </h1>
+        <h1 class="text-center appName"> The Customer's lens </h1>
           <span class="appname-quote">- We See And Listen Through Our Customers..!!</span>
       </div>
     </div>
