--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,7 @@ $whiteshade: #Fdfcfa;
 
     .logo{
         height: 32px;
-        margin: 13.9%;
+        margin: 19%;
     }
 }
 
@@ -28,7 +28,7 @@ $whiteshade: #Fdfcfa;
 
     .app-title {
         display: flex;
-        justify-content: space-around;
+        justify-content: center;
         padding: 15px 0;
 
         .listen-body-img {
@@ -36,7 +36,8 @@ $whiteshade: #Fdfcfa;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-left: 50px;;
+            margin-left: 40px;
+            //margin-right: 65px;
 
             img {
                 height: 80px;
@@ -55,10 +56,10 @@ $whiteshade: #Fdfcfa;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            margin-right: 155px;
+            //margin-left: 60px;
 
             .appName {
-                font-size: 45px;
+                font-size: 30px;
                 text-transform: uppercase;
                 font-weight: 600;
                 color: $variable;
