--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -19,7 +19,7 @@ $whiteshade: #Fdfcfa;
 
     .logo{
         height: 32px;
-        margin: 19%;
+        margin: 13.9%;
     }
 }
 
@@ -36,8 +36,7 @@ $whiteshade: #Fdfcfa;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-left: 40px;
-            //margin-right: 65px;
+            margin-right: 110px;
 
             img {
                 height: 80px;
@@ -56,10 +55,10 @@ $whiteshade: #Fdfcfa;
             display: flex;
             flex-direction: column;
             justify-content: center;
-            //margin-left: 60px;
+            margin-left: 50px;
 
             .appName {
-                font-size: 30px;
+                font-size: 35px;
                 text-transform: uppercase;
                 font-weight: 600;
                 color: $variable;
